fix(alert): fix lineheight on smaller screens

--- a/src/moj/components/alert/_alert.scss
+++ b/src/moj/components/alert/_alert.scss
@@ -75,20 +75,16 @@
 .moj-alert__content h2,
 .moj-alert__content h3,
 .moj-alert__content h4 {
-  margin-bottom: 2px;
-  line-height: 30px;
-}
-
-.moj-alert--with-heading .moj-alert__content {
-  // No padding needed when there is a heading
-  padding-top: 0;
+  margin-bottom: govuk-px-to-rem(5px);
 
   @include govuk-media-query($from: tablet) {
-    padding-top: 0;
+    margin-bottom: govuk-px-to-rem(3px);
   }
 }
 
-.moj-alert__content *:last-child {
+.moj-alert__content p:last-child,
+.moj-alert__content a:last-child,
+.moj-alert__content ul:last-child {
   margin-bottom: 0;
 }
 
